Prevent wrapping on nav menu items

--- a/src/styles/nav-menu.css
+++ b/src/styles/nav-menu.css
@@ -118,6 +118,7 @@
   text-transform: uppercase;
   text-align: right;
   list-style: none;
+  white-space: nowrap;
 }
 
 .nav-menu__item { transition: transform 0.5s, opacity 0.4s; }
